--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
 
 <title> Ecuacion Diferencial Ordinaria UACM </title>
 </head>
-<body background="file:///D:/computacion2/imagenes/bg.jpg" bgcolor="#121e56" text="whiter">
+<body background="https://drive.google.com/uc?export=download&id=1DhBYtTdcjQK1jdK3bCpftj_q24DaqGbY" bgcolor="#121e56" text="whiter">
 <center><table width="950"><tr><td>
 <p align="center"> <font size="6" > Ecuacion Diferencial Ordinaria </p>
 
-<img src="file:///D:/computacion2/imagenes/logo.png" height="170px" width="170px" alt="logo de la pagina">
+<img src="https://drive.google.com/uc?export=download&id=12yhfM5wWK1rNVGZCMhuL9pss9oU2aDSJ" height="170px" width="170px" alt="logo de la pagina">
 
 <center>
 <a href="index.html">
-<img src="file:///D:/computacion2/Menu/inicio.png" alt="boton de inicio"></a>
+<img src="https://drive.google.com/uc?export=download&id=1XWlhvOlSF5eo23_-x1l7QWKaWDTeH0us" alt="boton de inicio"></a>
 <a href="Nosotros.html">
-<img src="file:///D:/computacion2/Menu/Nosotros.png" alt="boton de Nosotros"></a>
+<img src="https://drive.google.com/uc?export=download&id=1ImXW3hLjhZQ4rYiMISOoQgtmbYzLIMb9" alt="boton de Nosotros"></a>
 <a href="Servicios.html">
-<img src="file:///D:/computacion2/Menu/Servicios.png" alt="boton de Servicios"></a>
+<img src="https://drive.google.com/uc?export=download&id=1qzW-ZthuBscupgAIiCCpUdqh2zeG6d6Y" alt="boton de Servicios"></a>
 <a href="Contacto.html">
-<img src="file:///D:/computacion2/Menu/Contacto.png" alt="boton de Contacto"></a>
+<img src="https://drive.google.com/uc?export=download&id=1BMtevJ6yVFUmTFSCa3VxEV8ywnvqwYUW" alt="boton de Contacto"></a>
 </center>
 
 <center>
-<a href="contacto.html">
-<img src="file:///D:/computacion2/imagenes/banner_circulos.png" alt="banner central de nuestra pagina"></center></a>
+	<a href="Contacto.html">Contacto</a><br>
+
+<img src="https://drive.google.com/uc?export=download&id=1zq3jLFt4OVredmRquNM4H99KC7Tb22cQ" alt="banner central de nuestra pagina">
 
 
 <center><table border="1" width="90%" bgcolor="#fff7db">
@@ -51,10 +52,10 @@ Da clic para abrirlo </a></h3></p>
 
 
 <a href="https://es.khanacademy.org/math/differential-equations/first-order-differential-equations">
-<img src="file:///D:/computacion2/imagenes/EDO1.png"></a>
+<img src="https://drive.google.com/uc?export=download&id=1z6kAps0JFu5XTKDKbPxvNiKI9w608jjN"></a>
 <p>
 <a href="https://es.khanacademy.org/math/differential-equations/second-order-differential-equations">
-<img src="file:///D:/computacion2/imagenes/EDO2.png"></a></p>
+<img src="https://drive.google.com/uc?export=download&id=1mCwz_hRMMYBlnt2F9wUDYtymmk-lZwWV"></a></p>
 
 
 
@@ -76,7 +77,7 @@ Mandanos un mensaje via email a
 </center>
 </td></tr></table></center>
 
-<p align="center"><img src="file:///D:/computacion2/ecuaciones.jpg" height="300px" width="300px"/></p>
+<p align="center"><img src="https://drive.google.com/uc?export=download&id=1DhBYtTdcjQK1jdK3bCpftj_q24DaqGbY" height="300px" width="300px"/></p>
 
 
 
