--- a/Contacto.html
+++ b/Contacto.html
@@ -23,8 +23,9 @@
 </center>
 
 <center>
-<a href="contacto.html">
-<img src="https://drive.google.com/uc?export=download&id=1ROxHBwvmzCmB7Feuh6nFPzNiy7Bl0SEW"  height="270px" width="370px alt="banner central de nuestra pagina"></center></a>
+<a href="Contacto.html">Contacto</a><br>
+
+<img src="https://drive.google.com/uc?export=download&id=1ROxHBwvmzCmB7Feuh6nFPzNiy7Bl0SEW"  height="270px" width="370px alt="banner central de nuestra pagina">
 
 
 <center><table border="1" width="90%" bgcolor="#fff7db">
