--- a/Nosotros.html
+++ b/Nosotros.html
@@ -23,9 +23,8 @@
 </center>
 
 <center>
-<a href="contacto.html">
-<img src="https://drive.google.com/uc?export=download&id=1ROxHBwvmzCmB7Feuh6nFPzNiy7Bl0SEW" alt="banner de nosotros" height="470px" width="470px" ></center></a>
-
+<a href="Contacto.html">
+<img src="https://drive.google.com/uc?export=download&id=1ROxHBwvmzCmB7Feuh6nFPzNiy7Bl0SEW" alt="banner de nosotros" height="470px" width="470px" alt="boton de Contacto"></a>
 
 <center><table border="1" width="90%" bgcolor="#fff7db">
 <tr>
