--- a/Servicios.html
+++ b/Servicios.html
@@ -23,8 +23,9 @@
 </center>
 
 <center>
-<a href="contacto.html">
-<img src="https://drive.google.com/uc?export=download&id=1zq3jLFt4OVredmRquNM4H99KC7Tb22cQ" alt="banner central de nuestra pagina"></center></a>
+<a href="Contacto.html">
+<img src="https://drive.google.com/uc?export=download&id=1zq3jLFt4OVredmRquNM4H99KC7Tb22cQ" alt="banner central de nuestra pagina"></a>
+</center>
 
 
 <center><table border="1" width="90%" bgcolor="#fff7db">
