--- a/Servicios.html
+++ b/Servicios.html
@@ -24,8 +24,9 @@
 
 <center>
 <a href="Contacto.html">
-<img src="https://drive.google.com/uc?export=download&id=1zq3jLFt4OVredmRquNM4H99KC7Tb22cQ" alt="banner central de nuestra pagina"></a>
-</center>
+
+<img src="https://drive.google.com/uc?export=download&id=1ROxHBwvmzCmB7Feuh6nFPzNiy7Bl0SEW"  height="270px" width="370px alt="banner central de nuestra pagina">
+
 
 
 <center><table border="1" width="90%" bgcolor="#fff7db">
