--- a/creador.html
+++ b/creador.html
@@ -1,18 +1,18 @@
 <html>
 <head>
-<meta name="description" content="las EDO mas facil de lo que parecen">
+<meta name="description" content="que los las EDO">
 <meta name="keywords" content="Ejercicios de EDO, Que son las EDO">
 
 <title> Ecuacion Diferencial Ordinaria UACM </title>
 </head>
-<body background="https://drive.google.com/uc?export=download&id=1uNY1mO6geKTRKrXsyvs4fS0ZcAKSUl6j" bgcolor="#121e56" text="whiter">
-<center><table width="950"><tr><td>
+<body background="https://drive.google.com/uc?export=download&id=1S4Vamu2yi8vC8td3oW3rMz3aq2WG9ShY" bgcolor="#121e56" text="whiter">
+<center><table width="1000"><tr><td>
 <p align="center"> <font size="6" > Ecuacion Diferencial Ordinaria </p>
 
 <img src="https://drive.google.com/uc?export=download&id=12yhfM5wWK1rNVGZCMhuL9pss9oU2aDSJ" height="170px" width="170px" alt="logo de la pagina">
 
 <center>
-<a href="index.html"target="blank">
+<a href="index.html"target="blank" >
 <img src="https://drive.google.com/uc?export=download&id=1XWlhvOlSF5eo23_-x1l7QWKaWDTeH0us" alt="boton de inicio"></a>
 <a href="Nosotros.html"target="blank">
 <img src="https://drive.google.com/uc?export=download&id=1ImXW3hLjhZQ4rYiMISOoQgtmbYzLIMb9" alt="boton de Nosotros"></a>
@@ -25,31 +25,34 @@
 </center>
 
 <center>
-<a href="Contacto.html"target="blank">
-
-<img src="https://drive.google.com/uc?export=download&id=1ROxHBwvmzCmB7Feuh6nFPzNiy7Bl0SEW"  height="270px" width="370px alt="banner central de nuestra pagina">
-
-
+<a href="Contacto.html" target="blank" >
+<img src="https://drive.google.com/uc?export=download&id=1ROxHBwvmzCmB7Feuh6nFPzNiy7Bl0SEW" alt="banner de nosotros" height="470px" width="470px" alt="boton de Contacto"></a>
 
 <center><table border="1" width="90%" bgcolor="#fff7db">
 <tr>
 
 <td colspan="2">
 <center><font face="verdana">
+<h4> Estudiante:  Eladio Garcia García   
+</h4>
+</font></center></td>
 
-<p><h4>
-Aqui se muetras unos videos para las series de potencia en EDO: </h4><br>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2tBU6GGTQs0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</tr>
+<tr>
+<td><p> <h2><font color="black" face="arial"> Datos </h2>
 
 </p></td>
-<td><p> <h4> <font color="black" face="arial">   Nuestro servicio es que en cualquier hora te puedes comunicar con nosotros agentando una cita para así resolver dudas en cualquier problema de EDO
-
+<td><p> <h4> <font color="black" face="arial"> Carrera:Ingeniería en Sistemas Electrónicos y de Telecomunicaciones
+  <p> Matricula: 19-002-0085  </p>
+  <p>Plnatel: Casa Libertad  </p>
+  <p>Materia: Computacion 2</p>
+  <p>Profesor: Armando Valera Paulino  </p>
 </h4></p>
-<p><h3> <font color="black" face="arial">Ecuaciones Diferenciales Ordinarias con Mate Facil<a href="https://www.youtube.com/watch?v=q3PKNySW6LQ&list=PL9SnRnlzoyX0RE6_wcrTKaWj8cmQb3uO6"target="blank">
+<p><h3> <font color="black" face="arial"
+  >Ecuaciones Diferenciales Ordinarias con Mate Facil<a href="https://www.youtube.com/watch?v=q3PKNySW6LQ&list=PL9SnRnlzoyX0RE6_wcrTKaWj8cmQb3uO6"target="blank">
 Da clic para ver los Videos</a></h3></p>
 <p>
-<h3> <font color="black" face="arial">Libro EDO - Schaum español <a href="https://drive.google.com/file/d/1CDUpZxUyrCa5iHQIKzTG2uZyxmxQBlH7/view"target="blank">
+<h3> <font color="black" face="arial" >Libro EDO - Schaum español <a href="https://drive.google.com/file/d/1CDUpZxUyrCa5iHQIKzTG2uZyxmxQBlH7/view"target="blank">
 Da clic para abrirlo </a></h3></p>
 
 
@@ -65,15 +68,13 @@ Da clic para abrirlo </a></h3></p>
 </tr>
 </table></center>
 <center>
-<a href="index.html"target="blank">
+<a href="index.html">
 inicio</a>
- <a href="Nosotros.html"target="blank">Nosotros</a>
+ <a href="Nosotros.html">Nosotros</a>
  <a href="creador.html"  target="blank">estudiante</a>
-<a href="Servicios.html"target="blank">Servicios</a>
-<a href="Contacto.html"target="blank">Contacto</a><br>
+<a href="Servicios.html">Servicios</a>
+<a href="Contacto.html">Contacto</a><br>
 
-Mandanos un mensaje via email a 
-<a href="mailto:eladio.garcia@estudiante.uacm.edu.mx"target="blank">eladio.garcia@estudiante.uacm.edu.mx</a>
 
 </center>
 
@@ -103,4 +104,6 @@ Mandanos un mensaje via email a
    <!-- Redes -->
 
 </body>
+
+<audio src="Alone.mp3" controls="true" autoplay="true" loop="true" volume="50"></audio>
 </html>
