--- a/Nosotros.html
+++ b/Nosotros.html
@@ -12,18 +12,20 @@
 <img src="https://drive.google.com/uc?export=download&id=12yhfM5wWK1rNVGZCMhuL9pss9oU2aDSJ" height="170px" width="170px" alt="logo de la pagina">
 
 <center>
-<a href="index.html">
+<a href="index.html"target="blank" >
 <img src="https://drive.google.com/uc?export=download&id=1XWlhvOlSF5eo23_-x1l7QWKaWDTeH0us" alt="boton de inicio"></a>
-<a href="Nosotros.html">
+<a href="Nosotros.html"target="blank">
 <img src="https://drive.google.com/uc?export=download&id=1ImXW3hLjhZQ4rYiMISOoQgtmbYzLIMb9" alt="boton de Nosotros"></a>
-<a href="Servicios.html">
+<a href="creador.html"target="blank">
+  <img src="https://drive.google.com/uc?export=download&id=13cwIKaErINimcmlQkX7l0mkkj6iXiexl" alt="boton de creado"></a>
+<a href="Servicios.html"target="blank">
 <img src="https://drive.google.com/uc?export=download&id=1qzW-ZthuBscupgAIiCCpUdqh2zeG6d6Y" alt="boton de Servicios"></a>
-<a href="Contacto.html">
+<a href="Contacto.html"target="blank">
 <img src="https://drive.google.com/uc?export=download&id=1BMtevJ6yVFUmTFSCa3VxEV8ywnvqwYUW" alt="boton de Contacto"></a>
 </center>
 
 <center>
-<a href="Contacto.html">
+<a href="Contacto.html" target="blank" >
 <img src="https://drive.google.com/uc?export=download&id=1ROxHBwvmzCmB7Feuh6nFPzNiy7Bl0SEW" alt="banner de nosotros" height="470px" width="470px" alt="boton de Contacto"></a>
 
 <center><table border="1" width="90%" bgcolor="#fff7db">
@@ -42,17 +44,18 @@
 </p></td>
 <td><p> <h4> <font color="black" face="arial">Dada una EDO de orden n, llamaremos solucion de esta EDO a una funcion y = f(x) definida en un intervalo I y que tiene al menos n derivadas continuas en el intervalo I, de forma que cuando sustituimos y=f(x) y sus derivadas en la EDO se cumple la ecuacion en todo el intervalo.
 </h4></p>
-<p><h3> <font color="black" face="arial">Ecuaciones Diferenciales Ordinarias con Mate Facil<a href="https://www.youtube.com/watch?v=q3PKNySW6LQ&list=PL9SnRnlzoyX0RE6_wcrTKaWj8cmQb3uO6">
+<p><h3> <font color="black" face="arial"
+  >Ecuaciones Diferenciales Ordinarias con Mate Facil<a href="https://www.youtube.com/watch?v=q3PKNySW6LQ&list=PL9SnRnlzoyX0RE6_wcrTKaWj8cmQb3uO6"target="blank">
 Da clic para ver los Videos</a></h3></p>
 <p>
-<h3> <font color="black" face="arial">Libro EDO - Schaum español <a href="https://drive.google.com/file/d/1CDUpZxUyrCa5iHQIKzTG2uZyxmxQBlH7/view">
+<h3> <font color="black" face="arial" >Libro EDO - Schaum español <a href="https://drive.google.com/file/d/1CDUpZxUyrCa5iHQIKzTG2uZyxmxQBlH7/view"target="blank">
 Da clic para abrirlo </a></h3></p>
 
 
-<a href="https://es.khanacademy.org/math/differential-equations/first-order-differential-equations">
+<a href="https://es.khanacademy.org/math/differential-equations/first-order-differential-equations"target="blank">
 <img src="https://drive.google.com/uc?export=download&id=1z6kAps0JFu5XTKDKbPxvNiKI9w608jjN"></a>
 <p>
-<a href="https://es.khanacademy.org/math/differential-equations/second-order-differential-equations">
+<a href="https://es.khanacademy.org/math/differential-equations/second-order-differential-equations"target="blank">
 <img src="https://drive.google.com/uc?export=download&id=1mCwz_hRMMYBlnt2F9wUDYtymmk-lZwWV"></a></p>
 
 
@@ -64,6 +67,7 @@ Da clic para abrirlo </a></h3></p>
 <a href="index.html">
 inicio</a>
  <a href="Nosotros.html">Nosotros</a>
+ <a href="creador.html"  target="blank">estudiante</a>
 <a href="Servicios.html">Servicios</a>
 <a href="Contacto.html">Contacto</a><br>
 
@@ -77,7 +81,27 @@ Mandanos un mensaje via email a
 
 <p align="center"><img src="https://drive.google.com/uc?export=download&id=1DhBYtTdcjQK1jdK3bCpftj_q24DaqGbY" height="300px" width="300px"/></p>
 
+<!-- Redes -->
+   
+<div class="redes">
+  
+    <h2> Siguenos en:</h2>
+   <ul class="sociales">
+         <li><a href="https://web.facebook.com/profile.php?id=100076892421721"target="blank"><img src="https://drive.google.com/uc?export=download&id=18TMJTZ4Qlid3bENtaPB_XKeig-KgLacK"
+   width="45" height="45"></a></li>
+   <li><a href="https://twitter.com/EcuacionesDO"target="blank"><img src="https://drive.google.com/uc?export=download&id=1ewYaQv5viqM7xY7pjufASV7jc0kpVpia"
+    width="45" height="45"></a></li>
+    <li><a href="https://www.youtube.com/channel/UCrvyXuNjTu5WiwHqO3VmElg" target="blank"><img src="https://drive.google.com/uc?export=download&id=1mZkUlZ9XoXx2OE3zth6xZzl2GYFlWfe_"
+      width="45" height="45"></a></li>
+      <li><a href="https://www.instagram.com/ecuacionesdiferencialesordin/"target="blank"><img src="https://drive.google.com/uc?export=download&id=1HAhEQMfTJdun1CNNDkzT9dz5mAr8abYN"
+        width="45" height="45"></a></li>
+   
+   </ul>
+   </div>
 
+   <!-- Redes -->
 
 </body>
+
+<audio src="Alone.mp3" controls="true" autoplay="true" loop="true" volume="50"></audio>
 </html>
