--- a/Contacto.html
+++ b/Contacto.html
@@ -5,23 +5,18 @@
 
 <title> Ecuacion Diferencial Ordinaria UACM </title>
 </head>
-<body background="https://drive.google.com/uc?export=download&id=1lXKl_jEdQaRg_otJJuGvlOfynSRJ99Xu" bgcolor="#121e56" text="whiter">
+<body background="https://drive.google.com/uc?export=download&id=1cJ1_-ImMy5YTD3uv7udNNU4CgaCOUyeY" bgcolor="#121e56" text="whiter">
 <center><table width="950"><tr><td>
 <p align="center"> <font size="6" > Ecuacion Diferencial Ordinaria </p>
 
 <img src="https://drive.google.com/uc?export=download&id=12yhfM5wWK1rNVGZCMhuL9pss9oU2aDSJ" height="170px" width="170px" alt="logo de la pagina">
 
 <center>
-<a href="index.html"target="blank">
-<img src="https://drive.google.com/uc?export=download&id=1XWlhvOlSF5eo23_-x1l7QWKaWDTeH0us" alt="boton de inicio"></a>
-<a href="Nosotros.html"target="blank">
-<img src="https://drive.google.com/uc?export=download&id=1ImXW3hLjhZQ4rYiMISOoQgtmbYzLIMb9" alt="boton de Nosotros"></a>
-<a href="creador.html"target="blank">
-  <img src="https://drive.google.com/uc?export=download&id=13cwIKaErINimcmlQkX7l0mkkj6iXiexl" alt="boton de creado"></a>
-<a href="Servicios.html"target="blank">
-<img src="https://drive.google.com/uc?export=download&id=1qzW-ZthuBscupgAIiCCpUdqh2zeG6d6Y" alt="boton de Servicios"></a>
-<a href="Contacto.html"target="blank">
-<img src="https://drive.google.com/uc?export=download&id=1BMtevJ6yVFUmTFSCa3VxEV8ywnvqwYUW" alt="boton de Contacto"></a>
+  <a href="index.html" target="_blank"><button class="pulse">inicio</button></a>
+  <a href="Nosotros.html" target="_blank"><button class="close">Nosotros</button></a>
+  <a href="creador.html" target="_blank"><button class="raise">Estudiante</button></a>
+  <a href="Servicios.html" target="_blank"><button class="up">Servicios</button></a>
+  <a href="Contacto.html" target="_blank"><button class="slide">Contacto</button></a>
 </center>
 
 <center>
@@ -49,12 +44,16 @@
 
 </p></td>
 <td><p> <h4> <font color="black" face="arial">Dada una EDO de orden n, llamaremos solucion de esta EDO a una funcion y = f(x) definida en un intervalo I y que tiene al menos n derivadas continuas en el intervalo I, de forma que cuando sustituimos y=f(x) y sus derivadas en la EDO se cumple la ecuacion en todo el intervalo.
+
 </h4></p>
-<p><h3> <font color="black" face="arial">Ecuaciones Diferenciales Ordinarias con Mate Facil<a href="https://www.youtube.com/watch?v=q3PKNySW6LQ&list=PL9SnRnlzoyX0RE6_wcrTKaWj8cmQb3uO6"target="blank">
-Da clic para ver los Videos</a></h3></p>
+<p><h3> <font color="black" face="arial"
+>Ecuaciones Diferenciales Ordinarias con Mate Facil<a href="https://www.youtube.com/watch?v=q3PKNySW6LQ&list=PL9SnRnlzoyX0RE6_wcrTKaWj8cmQb3uO6"target="blank">
+    <button class="slide">Da clic para abrirlo</button></a> </a></h3></p>
 <p>
-<h3> <font color="black" face="arial">Libro EDO - Schaum español <a href="https://drive.google.com/file/d/1CDUpZxUyrCa5iHQIKzTG2uZyxmxQBlH7/view"target="blank">
-Da clic para abrirlo </a></h3></p>
+<h3> <font color="black" face="arial" >Libro EDO - Schaum español <a href="https://drive.google.com/file/d/1CDUpZxUyrCa5iHQIKzTG2uZyxmxQBlH7/view"target="blank">
+  <button class="slide">Da clic para abrirlo</button></a> </a></h3></p>
+<h3> <font color="black" face="arial" >Libro EDO - Kiseliov, Krasnov, Makarenko <a href="https://drive.google.com/file/d/1U_mW50eZGocpBLDi-OosXOKHg2SZBDPg/view?usp=sharing"target="blank">
+  <button class="slide">Da clic para abrirlo</button></a> </a></h3></p>
 
 
 <a href="https://es.khanacademy.org/math/differential-equations/first-order-differential-equations"target="blank">
@@ -69,15 +68,15 @@ Da clic para abrirlo </a></h3></p>
 </tr>
 </table></center>
 <center>
-<a href="index.html"target="blank">
-inicio</a>
- <a href="Nosotros.html"target="blank">Nosotros</a>
- <a href="creador.html"  target="blank">estudiante</a>
-<a href="Servicios.html"target="blank">Servicios</a>
-<a href="Contacto.html"target="blank">Contacto</a><br>
+  <a href="index.html" target="_blank"><button class="pulse">inicio</button></a>
+  <a href="Nosotros.html" target="_blank"><button class="close">Nosotros</button></a>
+  <a href="creador.html" target="_blank"><button class="raise">Estudiante</button></a>
+  <a href="Servicios.html" target="_blank"><button class="up">Servicios</button></a>
+  <a href="Contacto.html" target="_blank"><button class="slide">Contacto</button></a>
+<p><a href="Formulario.html"target="blank"><button class="slide">Formulario 2</button></a>
+</p>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdT_nBNlTGUT0fBH51mHCckXPIyH-Ue1Tfi-iASpdUsbdacMg/viewform?embedded=true" target="_blank"><button class="slide">Formulario</button></a></p>
 
-Mandanos un mensaje via email a 
-<a href="mailto:eladio.garcia@estudiante.uacm.edu.mx"target="blank">eladio.garcia@estudiante.uacm.edu.mx</a>
 
 </center>
 
