--- a/creador.html
+++ b/creador.html
@@ -3,25 +3,21 @@
 <meta name="description" content="que los las EDO">
 <meta name="keywords" content="Ejercicios de EDO, Que son las EDO">
 
-<title> Ecuacion Diferencial Ordinaria UACM </title>
+<title>Ecuacion Diferencial Ordinaria UACM  </title>
 </head>
-<body background="https://drive.google.com/uc?export=download&id=1S4Vamu2yi8vC8td3oW3rMz3aq2WG9ShY" bgcolor="#121e56" text="whiter">
+<body background="https://drive.google.com/uc?export=download&id=1ukUw7w-OQbAHJmUWzeNFy7oweCt9bMB8" bgcolor="#121e54" text="whiter">
 <center><table width="1000"><tr><td>
-<p align="center"> <font size="6" > Ecuacion Diferencial Ordinaria </p>
+<p align="center"> <font size="15" > Ecuacion Diferencial Ordinaria  </p>
 
 <img src="https://drive.google.com/uc?export=download&id=12yhfM5wWK1rNVGZCMhuL9pss9oU2aDSJ" height="170px" width="170px" alt="logo de la pagina">
 
 <center>
-<a href="index.html"target="blank" >
-<img src="https://drive.google.com/uc?export=download&id=1XWlhvOlSF5eo23_-x1l7QWKaWDTeH0us" alt="boton de inicio"></a>
-<a href="Nosotros.html"target="blank">
-<img src="https://drive.google.com/uc?export=download&id=1ImXW3hLjhZQ4rYiMISOoQgtmbYzLIMb9" alt="boton de Nosotros"></a>
-<a href="creador.html"target="blank">
-  <img src="https://drive.google.com/uc?export=download&id=13cwIKaErINimcmlQkX7l0mkkj6iXiexl" alt="boton de creado"></a>
-<a href="Servicios.html"target="blank">
-<img src="https://drive.google.com/uc?export=download&id=1qzW-ZthuBscupgAIiCCpUdqh2zeG6d6Y" alt="boton de Servicios"></a>
-<a href="Contacto.html"target="blank">
-<img src="https://drive.google.com/uc?export=download&id=1BMtevJ6yVFUmTFSCa3VxEV8ywnvqwYUW" alt="boton de Contacto"></a>
+
+  <a href="index.html" target="_blank"><button class="pulse">inicio</button></a>
+  <a href="Nosotros.html" target="_blank"><button class="close">Nosotros</button></a>
+  <a href="creador.html" target="_blank"><button class="raise">Estudiante</button></a>
+  <a href="Servicios.html" target="_blank"><button class="up">Servicios</button></a>
+  <a href="Contacto.html" target="_blank"><button class="slide">Contacto</button></a>
 </center>
 
 <center>
@@ -49,11 +45,13 @@
   <p>Profesor: Armando Valera Paulino  </p>
 </h4></p>
 <p><h3> <font color="black" face="arial"
-  >Ecuaciones Diferenciales Ordinarias con Mate Facil<a href="https://www.youtube.com/watch?v=q3PKNySW6LQ&list=PL9SnRnlzoyX0RE6_wcrTKaWj8cmQb3uO6"target="blank">
-Da clic para ver los Videos</a></h3></p>
+>Ecuaciones Diferenciales Ordinarias con Mate Facil<a href="https://www.youtube.com/watch?v=q3PKNySW6LQ&list=PL9SnRnlzoyX0RE6_wcrTKaWj8cmQb3uO6"target="blank">
+    <button class="slide">Da clic para abrirlo</button></a> </a></h3></p>
 <p>
 <h3> <font color="black" face="arial" >Libro EDO - Schaum español <a href="https://drive.google.com/file/d/1CDUpZxUyrCa5iHQIKzTG2uZyxmxQBlH7/view"target="blank">
-Da clic para abrirlo </a></h3></p>
+  <button class="slide">Da clic para abrirlo</button></a> </a></h3></p>
+<h3> <font color="black" face="arial" >Libro EDO - Kiseliov, Krasnov, Makarenko <a href="https://drive.google.com/file/d/1U_mW50eZGocpBLDi-OosXOKHg2SZBDPg/view?usp=sharing"target="blank">
+  <button class="slide">Da clic para abrirlo</button></a> </a></h3></p>
 
 
 <a href="https://es.khanacademy.org/math/differential-equations/first-order-differential-equations"target="blank">
@@ -68,12 +66,12 @@ Da clic para abrirlo </a></h3></p>
 </tr>
 </table></center>
 <center>
-<a href="index.html">
-inicio</a>
- <a href="Nosotros.html">Nosotros</a>
- <a href="creador.html"  target="blank">estudiante</a>
-<a href="Servicios.html">Servicios</a>
-<a href="Contacto.html">Contacto</a><br>
+
+<a href="index.html" target="_blank"><button class="pulse">inicio</button></a>
+<a href="Nosotros.html" target="_blank"><button class="close">Nosotros</button></a>
+<a href="creador.html" target="_blank"><button class="raise">Estudiante</button></a>
+<a href="Servicios.html" target="_blank"><button class="up">Servicios</button></a>
+<a href="Contacto.html" target="_blank"><button class="slide">Contacto</button></a>
 
 
 </center>
@@ -87,7 +85,7 @@ inicio</a>
    
 <div class="redes">
   
-    <h2> Siguenos en:</h2>
+    <h1> Siguenos en </h1>
    <ul class="sociales">
          <li><a href="https://web.facebook.com/profile.php?id=100076892421721"target="blank"><img src="https://drive.google.com/uc?export=download&id=18TMJTZ4Qlid3bENtaPB_XKeig-KgLacK"
    width="45" height="45"></a></li>
@@ -104,6 +102,5 @@ inicio</a>
    <!-- Redes -->
 
 </body>
-
-<audio src="Alone.mp3" controls="true" autoplay="true" loop="true" volume="50"></audio>
+<audio src="https://drive.google.com/uc?export=download&id=1fKV_HnZI5No9_I_4X5iGovc01nGjSu4b" controls="true" autoplay="true" loop="true" volume="50"></audio>
 </html>
