--- a/Contacto.html
+++ b/Contacto.html
@@ -4,6 +4,10 @@
 <meta name="keywords" content="Ejercicios de EDO, Que son las EDO">
 
 <title> Ecuacion Diferencial Ordinaria UACM </title>
+<!-- otro -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+<!-- otro -->
 </head>
 <body background="https://drive.google.com/uc?export=download&id=1cJ1_-ImMy5YTD3uv7udNNU4CgaCOUyeY" bgcolor="#121e56" text="whiter">
 <center><table width="950"><tr><td>
