--- a/Nosotros.html
+++ b/Nosotros.html
@@ -76,7 +76,10 @@
 </td></tr></table></center>
 
 <p align="center"><img src="https://drive.google.com/uc?export=download&id=1DhBYtTdcjQK1jdK3bCpftj_q24DaqGbY" height="300px" width="300px"/></p>
+<!-- otro -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
+<!-- otro -->
 <!-- Redes -->
    
 <div class="redes">
