--- a/creador.html
+++ b/creador.html
@@ -4,10 +4,13 @@
 <meta name="keywords" content="Ejercicios de EDO, Que son las EDO">
 
 <title>Ecuacion Diferencial Ordinaria UACM  </title>
+
+
+
 </head>
 <body background="https://drive.google.com/uc?export=download&id=1ukUw7w-OQbAHJmUWzeNFy7oweCt9bMB8" bgcolor="#121e54" text="whiter">
 <center><table width="1000"><tr><td>
-<p align="center"> <font size="15" > Ecuacion Diferencial Ordinaria  </p>
+<p align="center"> <font size="6" > Ecuacion Diferencial Ordinaria  </p>
 
 <img src="https://drive.google.com/uc?export=download&id=12yhfM5wWK1rNVGZCMhuL9pss9oU2aDSJ" height="170px" width="170px" alt="logo de la pagina">
 
@@ -81,11 +84,18 @@
 
 <p align="center"><img src="https://drive.google.com/uc?export=download&id=1DhBYtTdcjQK1jdK3bCpftj_q24DaqGbY" height="300px" width="300px"/></p>
 
+<!-- otro -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+<!-- otro -->
 <!-- Redes -->
    
+
+
 <div class="redes">
   
     <h1> Siguenos en </h1>
+
    <ul class="sociales">
          <li><a href="https://web.facebook.com/profile.php?id=100076892421721"target="blank"><img src="https://drive.google.com/uc?export=download&id=18TMJTZ4Qlid3bENtaPB_XKeig-KgLacK"
    width="45" height="45"></a></li>
