--- a/Servicios.html
+++ b/Servicios.html
@@ -4,10 +4,14 @@
 <meta name="keywords" content="Ejercicios de EDO, Que son las EDO">
 
 <title> Ecuacion Diferencial Ordinaria UACM </title>
+<!-- otro -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+<!-- otro -->
 </head>
 <body background="https://drive.google.com/uc?export=download&id=1uNY1mO6geKTRKrXsyvs4fS0ZcAKSUl6j" bgcolor="#121e56" text="whiter">
 <center><table width="950"><tr><td>
-<p align="center"> <font size="15" > Ecuacion Diferencial Ordinaria </p>
+<p align="center"> <font size="6" > Ecuacion Diferencial Ordinaria </p>
 
 <img src="https://drive.google.com/uc?export=download&id=12yhfM5wWK1rNVGZCMhuL9pss9oU2aDSJ" height="170px" width="170px" alt="logo de la pagina">
 
@@ -68,7 +72,7 @@ Aqui se muetras unos videos para las series de potencia en EDO: </h4><br>
   <a href="creador.html" target="_blank"><button class="raise">Estudiante</button></a>
   <a href="Servicios.html" target="_blank"><button class="up">Servicios</button></a>
   <a href="Contacto.html" target="_blank"><button class="slide">Contacto</button></a>
-<p><a href="mailto:eladio.garcia@estudiante.uacm.edu.mx"target="blank"><button class="slide">nustro correo es:</button></a>
+<p><a href="mailto:eladio.garcia@estudiante.uacm.edu.mx"target="blank"><button class="slide">nuestro correo es:</button></a>
 </p>
 
 
