--- a/creador.html
+++ b/creador.html
@@ -6,7 +6,6 @@
 <title>Ecuacion Diferencial Ordinaria UACM  </title>
 
 
-
 </head>
 <body background="https://drive.google.com/uc?export=download&id=1ukUw7w-OQbAHJmUWzeNFy7oweCt9bMB8" bgcolor="#121e54" text="whiter">
 <center><table width="1000"><tr><td>
@@ -94,7 +93,7 @@
 
 <div class="redes">
   
-    <h1> Siguenos en </h1>
+    <h1> Siguenos en ; </h1>
 
    <ul class="sociales">
          <li><a href="https://web.facebook.com/profile.php?id=100076892421721"target="blank"><img src="https://drive.google.com/uc?export=download&id=18TMJTZ4Qlid3bENtaPB_XKeig-KgLacK"
