--- a/Contacto.html
+++ b/Contacto.html
@@ -131,11 +131,11 @@
                 LOMAS DE LA ESTANCIA IZTAPALAPA CIUADA DE MEXICO<br />
                 09640 MEX
                 <br />
-                Tel: 5549318619
+                Tel: 5548318619
                 
         <div class="cleaner_h40"></div>
             
-                <h6>Dirección DE NUESTRA INSTITICION</h6>
+                <h6>Dirección De Nuestra institución </h6>
                 Ermita Iztapalapa 4163, Lomas de Zaragoza, <br />
                 Iztapalapa, 09620 Ciudad de México, CDMX<br />
                 Tel:  55 5850 0538
